--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body {
     margin: 0;
     height: 100vh;
-    background: white;
+    background: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,25 +19,23 @@ body {
     overflow: hidden;
 }
 
-/* shared phone card */
+/* phone container */
 .phone {
     width: 92vw;
     max-width: 360px;
     background: #fff6fa;
     border-radius: 30px;
-    padding: 30px 22px;
+    padding: 28px 22px;
     text-align: center;
     box-shadow: 0 20px 45px rgba(0,0,0,0.15);
     display: none;
 }
 
-.phone.active {
-    display: block;
-}
+.phone.active { display: block; }
 
 /* ---------- FIRST SCREEN ---------- */
 #screen1 {
-    animation: zoomIn 2.6s ease forwards;
+    animation: zoomIn 2.5s ease forwards;
 }
 
 @keyframes zoomIn {
@@ -48,7 +46,7 @@ body {
 h1 {
     color: #ff2f92;
     font-size: 1.6rem;
-    margin-bottom: 16px;
+    margin-bottom: 14px;
 }
 
 p {
@@ -83,15 +81,15 @@ button:active { transform: scale(0.97); }
     color: #777;
 }
 
-/* ---------- CAKE ---------- */
+/* ---------- CAKE SCREEN ---------- */
 .subtitle {
     font-size: 0.9rem;
     color: #666;
-    margin-bottom: 16px;
+    margin-bottom: 14px;
 }
 
 .instructions {
-    background: #fff;
+    background: #ffffff;
     border-radius: 18px;
     padding: 14px;
     font-size: 0.85rem;
@@ -101,78 +99,88 @@ button:active { transform: scale(0.97); }
 
 .cake-area {
     position: relative;
-    height: 220px;
+    height: 240px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* cake body */
 .cake {
-    width: 220px;
-    height: 120px;
-    background: linear-gradient(#f5d6b4, #e6b98a);
-    border-radius: 0 0 60px 60px;
     position: relative;
+    width: 230px;
+    height: 140px;
+    background: linear-gradient(#f3d2b3, #e1b285);
+    border-radius: 0 0 70px 70px;
     overflow: hidden;
 }
 
+/* frosting top */
 .cake::before {
     content: "";
     position: absolute;
-    top: -20px;
+    top: -25px;
+    left: 0;
     width: 100%;
-    height: 40px;
-    background: #fff;
+    height: 50px;
+    background: #ffffff;
     border-radius: 50%;
 }
 
+/* candle */
 .candle {
     position: absolute;
-    top: -45px;
+    top: -50px;
     left: 50%;
     transform: translateX(-50%);
     width: 10px;
-    height: 40px;
+    height: 42px;
     background: #ff4d6d;
     border-radius: 5px;
 }
 
 .flame {
     position: absolute;
-    top: -15px;
+    top: -16px;
     left: 50%;
     transform: translateX(-50%);
     width: 12px;
     height: 18px;
-    background: orange;
+    background: radial-gradient(circle, #ffd966, #ff8c00);
     border-radius: 50%;
 }
 
+/* cut line — FIXED CENTER */
 .cut-line {
     position: absolute;
-    width: 3px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 4px;
     height: 100%;
     background: #ff2f92;
     display: none;
 }
 
+/* success message */
 .message {
-    margin-top: 14px;
+    margin-top: 16px;
     font-size: 1.2rem;
     font-weight: bold;
     color: #ff2f92;
     display: none;
 }
 
+/* confetti */
 .confetti {
     position: absolute;
     font-size: 18px;
-    animation: fall 1.5s linear forwards;
+    animation: fall 1.4s linear forwards;
 }
 
 @keyframes fall {
     from { transform: translateY(-20px); opacity: 1; }
-    to { transform: translateY(220px); opacity: 0; }
+    to { transform: translateY(240px); opacity: 0; }
 }
 </style>
 </head>
@@ -197,13 +205,13 @@ button:active { transform: scale(0.97); }
     </div>
 </div>
 
-<!-- SECOND SCREEN -->
+<!-- CAKE SCREEN -->
 <div class="phone" id="screen2">
     <h1>It’s Cake Time! 🎂</h1>
     <div class="subtitle">Make your birthday wish come true!</div>
 
     <div class="instructions">
-        Swipe across the cake to cut it ✂️
+        Swipe down to cut the cake ✂️
     </div>
 
     <div class="cake-area">
@@ -222,46 +230,51 @@ const screen1 = document.getElementById("screen1");
 const screen2 = document.getElementById("screen2");
 const goBtn = document.getElementById("goBtn");
 
-goBtn.addEventListener("click", () => {
+goBtn.onclick = () => {
     screen1.classList.remove("active");
     screen2.classList.add("active");
     initCake();
-});
+};
 
 function initCake() {
-    let isCut = false;
     const cake = document.getElementById("cake");
     const cutLine = document.getElementById("cutLine");
     const message = document.getElementById("message");
 
-    cake.addEventListener("pointerdown", () => {
-        if (!isCut) cutLine.style.display = "block";
+    let startY = null;
+    let done = false;
+
+    cake.addEventListener("pointerdown", e => {
+        if (done) return;
+        startY = e.clientY;
     });
 
-    cake.addEventListener("pointermove", e => {
-        if (isCut || e.pressure === 0) return;
-        const rect = cake.getBoundingClientRect();
-        cutLine.style.left = (e.clientX - rect.left) + "px";
-    });
+    cake.addEventListener("pointerup", e => {
+        if (done || startY === null) return;
 
-    cake.addEventListener("pointerup", () => {
-        if (isCut) return;
-        isCut = true;
-        cutLine.style.display = "none";
-        message.style.display = "block";
-        confetti();
+        const distance = Math.abs(e.clientY - startY);
+
+        /* REQUIRE REAL SWIPE */
+        if (distance > 60) {
+            done = true;
+            cutLine.style.display = "block";
+            message.style.display = "block";
+            launchConfetti();
+        }
+
+        startY = null;
     });
 }
 
-function confetti() {
+function launchConfetti() {
     for (let i = 0; i < 20; i++) {
         const c = document.createElement("div");
         c.className = "confetti";
         c.textContent = ["🎉","✨","🎂","💖"][Math.floor(Math.random()*4)];
-        c.style.left = Math.random()*100 + "%";
+        c.style.left = Math.random() * 100 + "%";
         c.style.top = "0px";
         document.body.appendChild(c);
-        setTimeout(() => c.remove(), 1500);
+        setTimeout(() => c.remove(), 1400);
     }
 }
 </script>
