--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Birthday Surprise 🎂</title>
 
 <style>
@@ -11,272 +11,204 @@
 body {
     margin: 0;
     height: 100vh;
-    background: #ffffff;
+    background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-    overflow: hidden;
 }
 
 /* phone container */
 .phone {
     width: 92vw;
     max-width: 360px;
-    background: #fff6fa;
+    background: #ffffff;
     border-radius: 30px;
-    padding: 28px 22px;
+    padding: 26px 22px;
     text-align: center;
-    box-shadow: 0 20px 45px rgba(0,0,0,0.15);
+    box-shadow: 0 20px 45px rgba(0,0,0,0.12);
     display: none;
 }
 
 .phone.active { display: block; }
 
-/* ---------- FIRST SCREEN ---------- */
-#screen1 {
-    animation: zoomIn 2.5s ease forwards;
-}
-
-@keyframes zoomIn {
-    from { transform: scale(0.6); opacity: 0; }
-    to { transform: scale(1); opacity: 1; }
-}
-
+/* intro */
 h1 {
-    color: #ff2f92;
+    color: #ff4f8b;
     font-size: 1.6rem;
-    margin-bottom: 14px;
+    margin-bottom: 12px;
 }
 
 p {
     font-size: 0.9rem;
-    color: #555;
+    color: #666;
     line-height: 1.6;
-}
-
-.ready {
-    font-weight: 600;
-    color: #ff2f92;
-    margin: 18px 0;
 }
 
 button {
     width: 100%;
-    padding: 15px;
+    padding: 14px;
     border: none;
-    border-radius: 30px;
+    border-radius: 28px;
     font-size: 1rem;
-    background: linear-gradient(135deg, #ff2f92, #ff6fb1);
+    background: #ff4f8b;
     color: white;
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+    margin-top: 18px;
 }
 
-button:active { transform: scale(0.97); }
-
-.footer {
-    margin-top: 20px;
-    font-size: 0.75rem;
-    color: #777;
-}
-
-/* ---------- CAKE SCREEN ---------- */
+/* cake screen */
 .subtitle {
-    font-size: 0.9rem;
-    color: #666;
+    font-size: 0.85rem;
+    color: #888;
     margin-bottom: 14px;
 }
 
-.instructions {
-    background: #ffffff;
-    border-radius: 18px;
-    padding: 14px;
-    font-size: 0.85rem;
-    color: #555;
-    margin-bottom: 16px;
-}
-
 .cake-area {
-    position: relative;
     height: 240px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* cake body */
+/* ===== ILLUSTRATED CAKE ===== */
 .cake {
     position: relative;
-    width: 230px;
-    height: 140px;
-    background: linear-gradient(#f3d2b3, #e1b285);
-    border-radius: 0 0 70px 70px;
+    width: 180px;
+    height: 110px;
+    background: #f28cb2;
+    border-radius: 0 0 18px 18px;
     overflow: hidden;
 }
 
-/* frosting top */
-.cake::before {
+/* cake layers */
+.cake::before,
+.cake::after {
     content: "";
     position: absolute;
-    top: -25px;
     left: 0;
     width: 100%;
-    height: 50px;
-    background: #ffffff;
+    height: 12px;
+    background: #ffd1e2;
+}
+
+.cake::before { top: 32px; }
+.cake::after  { top: 64px; }
+
+/* frosting top */
+.frosting {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: #fff;
     border-radius: 50%;
 }
 
-/* candle */
+/* candles */
 .candle {
     position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 10px;
-    height: 42px;
-    background: #ff4d6d;
-    border-radius: 5px;
+    top: -38px;
+    width: 8px;
+    height: 28px;
+    background: #ffd966;
+    border-radius: 4px;
 }
 
-.flame {
+.candle:nth-child(1) { left: 25%; }
+.candle:nth-child(2) { left: 45%; }
+.candle:nth-child(3) { left: 65%; }
+
+/* flames */
+.candle::after {
+    content: "";
     position: absolute;
-    top: -16px;
+    top: -10px;
     left: 50%;
     transform: translateX(-50%);
-    width: 12px;
-    height: 18px;
-    background: radial-gradient(circle, #ffd966, #ff8c00);
+    width: 6px;
+    height: 10px;
+    background: #ff9f1c;
     border-radius: 50%;
 }
 
-/* cut line — FIXED CENTER */
+/* cut line */
 .cut-line {
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 4px;
+    width: 3px;
     height: 100%;
-    background: #ff2f92;
+    background: #ff4f8b;
     display: none;
 }
 
-/* success message */
 .message {
-    margin-top: 16px;
-    font-size: 1.2rem;
+    margin-top: 14px;
+    font-size: 1.1rem;
+    color: #ff4f8b;
     font-weight: bold;
-    color: #ff2f92;
     display: none;
-}
-
-/* confetti */
-.confetti {
-    position: absolute;
-    font-size: 18px;
-    animation: fall 1.4s linear forwards;
-}
-
-@keyframes fall {
-    from { transform: translateY(-20px); opacity: 1; }
-    to { transform: translateY(240px); opacity: 0; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- FIRST SCREEN -->
+<!-- INTRO -->
 <div class="phone active" id="screen1">
-    <h1>Happy Birthday,<br>Beautiful! 🎂✨</h1>
-
-    <p>
-        Today is all about celebrating the most amazing person in my world.
-        I’ve created something magical just for you on your special day...
-    </p>
-
-    <div class="ready">Ready for your birthday surprise?</div>
-
-    <button id="goBtn">Let’s Gooo 💖</button>
-
-    <div class="footer">
-        Made with endless love for your special day 💕
-    </div>
+    <h1>Happy Birthday! 🎉</h1>
+    <p>I made something cute just for you 💖</p>
+    <button id="go">Let’s Go 🎂</button>
 </div>
 
-<!-- CAKE SCREEN -->
+<!-- CAKE -->
 <div class="phone" id="screen2">
-    <h1>It’s Cake Time! 🎂</h1>
-    <div class="subtitle">Make your birthday wish come true!</div>
-
-    <div class="instructions">
-        Swipe down to cut the cake ✂️
-    </div>
+    <h1>It’s Cake Time 🎂</h1>
+    <div class="subtitle">Swipe down to cut</div>
 
     <div class="cake-area">
         <div class="cake" id="cake">
+            <div class="frosting"></div>
             <div class="candle"></div>
-            <div class="flame"></div>
-            <div class="cut-line" id="cutLine"></div>
+            <div class="candle"></div>
+            <div class="candle"></div>
+            <div class="cut-line" id="cut"></div>
         </div>
     </div>
 
-    <div class="message" id="message">Perfect Cut! 🎉✨</div>
+    <div class="message" id="msg">Nice Cut 🎉</div>
 </div>
 
 <script>
-const screen1 = document.getElementById("screen1");
-const screen2 = document.getElementById("screen2");
-const goBtn = document.getElementById("goBtn");
+const go = document.getElementById("go");
+const s1 = document.getElementById("screen1");
+const s2 = document.getElementById("screen2");
 
-goBtn.onclick = () => {
-    screen1.classList.remove("active");
-    screen2.classList.add("active");
-    initCake();
+go.onclick = () => {
+    s1.classList.remove("active");
+    s2.classList.add("active");
 };
 
-function initCake() {
-    const cake = document.getElementById("cake");
-    const cutLine = document.getElementById("cutLine");
-    const message = document.getElementById("message");
+const cake = document.getElementById("cake");
+const cut = document.getElementById("cut");
+const msg = document.getElementById("msg");
 
-    let startY = null;
-    let done = false;
+let startY = null;
+let done = false;
 
-    cake.addEventListener("pointerdown", e => {
-        if (done) return;
-        startY = e.clientY;
-    });
+cake.addEventListener("pointerdown", e => startY = e.clientY);
 
-    cake.addEventListener("pointerup", e => {
-        if (done || startY === null) return;
-
-        const distance = Math.abs(e.clientY - startY);
-
-        /* REQUIRE REAL SWIPE */
-        if (distance > 60) {
-            done = true;
-            cutLine.style.display = "block";
-            message.style.display = "block";
-            launchConfetti();
-        }
-
-        startY = null;
-    });
-}
-
-function launchConfetti() {
-    for (let i = 0; i < 20; i++) {
-        const c = document.createElement("div");
-        c.className = "confetti";
-        c.textContent = ["🎉","✨","🎂","💖"][Math.floor(Math.random()*4)];
-        c.style.left = Math.random() * 100 + "%";
-        c.style.top = "0px";
-        document.body.appendChild(c);
-        setTimeout(() => c.remove(), 1400);
+cake.addEventListener("pointerup", e => {
+    if (done) return;
+    if (Math.abs(e.clientY - startY) > 50) {
+        done = true;
+        cut.style.display = "block";
+        msg.style.display = "block";
     }
-}
+});
 </script>
 
 </body>
