--- a/index.html
+++ b/index.html
@@ -1,41 +1,244 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Birthday Surprise</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Happy Birthday 🎂</title>
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+body {
+    background: #fff;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/* ===== SCREENS ===== */
+.screen {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: opacity 0.5s ease;
+}
+
+.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+/* ===== FIRST PAGE ===== */
+#screen1 {
+    animation: zoomIn 2s ease forwards;
+}
+
+@keyframes zoomIn {
+    from { transform: scale(0.9); }
+    to { transform: scale(1); }
+}
+
+.card {
+    width: 90%;
+    max-width: 360px;
+    background: #fff;
+    border-radius: 24px;
+    padding: 28px;
+    text-align: center;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+}
+
+.card h1 {
+    color: #ff4f8b;
+    margin-bottom: 12px;
+}
+
+.card p {
+    color: #555;
+    font-size: 0.95rem;
+    margin-bottom: 24px;
+}
+
+button {
+    border: none;
+    padding: 14px 28px;
+    font-size: 1rem;
+    border-radius: 30px;
+    background: #ff4f8b;
+    color: white;
+    cursor: pointer;
+}
+
+/* ===== SECOND PAGE ===== */
+#screen2 {
+    background: linear-gradient(#fff, #ffe6ef);
+}
+
+/* text */
+h2 {
+    color: #ff4f8b;
+    margin-bottom: 6px;
+}
+
+.subtitle {
+    font-size: 0.9rem;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+/* ===== CAKE ===== */
+.cake-area {
+    height: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cake {
+    position: relative;
+    width: 180px;
+    height: 110px;
+    background: #f28cb2;
+    border-radius: 0 0 18px 18px;
+    overflow: hidden;
+}
+
+/* layers */
+.cake::before,
+.cake::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 12px;
+    background: #ffd1e2;
+}
+
+.cake::before { top: 35px; }
+.cake::after  { top: 65px; }
+
+/* frosting */
+.frosting {
+    position: absolute;
+    top: -22px;
+    width: 100%;
+    height: 44px;
+    background: white;
+    border-radius: 50%;
+}
+
+/* candles */
+.candle {
+    position: absolute;
+    top: -38px;
+    width: 8px;
+    height: 28px;
+    background: #ffd966;
+    border-radius: 4px;
+}
+
+.candle::after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 6px;
+    height: 10px;
+    background: orange;
+    border-radius: 50%;
+}
+
+.cut-line {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 3px;
+    height: 100%;
+    background: #ff4f8b;
+    display: none;
+}
+
+.message {
+    margin-top: 16px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #ff4f8b;
+    display: none;
+}
+</style>
 </head>
+
 <body>
 
-<h1>Happy Birthday!</h1>
+<!-- FIRST SCREEN -->
+<div class="screen" id="screen1">
+    <div class="card">
+        <h1>Happy Birthday, Beautiful! 🎂✨</h1>
+        <p>Today is all about celebrating you.  
+        I made something special just for you 💖</p>
+        <button onclick="goNext()">Let’s Gooo</button>
+    </div>
+</div>
 
-<p>Make your birthday wish and cut your cake!</p>
+<!-- SECOND SCREEN -->
+<div class="screen hidden" id="screen2">
+    <h2>It’s Cake Time! 🎂</h2>
+    <div class="subtitle">Swipe down to cut the cake</div>
 
-<!-- Cake -->
-<pre>
-     || 
-     ||   (candle)
-    ----
-   |    |
-   | CA |
-   | KE |
-   |____|
-</pre>
+    <div class="cake-area">
+        <div class="cake" id="cake">
+            <div class="frosting"></div>
 
-{% if not cut %}
-<form method="POST">
-    <button type="submit">Cut the Cake ✂️</button>
-</form>
-{% endif %}
+            <div class="candle" style="left:30%"></div>
+            <div class="candle" style="left:50%"></div>
+            <div class="candle" style="left:70%"></div>
 
-{% if cut %}
-<h2>You cut the cake! 🎉🎉</h2>
+            <div class="cut-line" id="cutLine"></div>
+        </div>
+    </div>
 
-<pre>
-   | CA |   | KE |
-   |____|   |____|
-</pre>
+    <div class="message" id="message">Nice Cut 🎉</div>
+</div>
 
-<p>Perfect cut! Enjoy your birthday! 🎂✨</p>
-{% endif %}
+<script>
+/* page navigation */
+function goNext() {
+    document.getElementById("screen1").classList.add("hidden");
+    document.getElementById("screen2").classList.remove("hidden");
+}
+
+/* cake cutting */
+const cake = document.getElementById("cake");
+const cutLine = document.getElementById("cutLine");
+const message = document.getElementById("message");
+
+let startY = null;
+let done = false;
+
+cake.addEventListener("pointerdown", e => {
+    startY = e.clientY;
+});
+
+cake.addEventListener("pointerup", e => {
+    if (done || startY === null) return;
+
+    if (e.clientY - startY > 60) {
+        done = true;
+        cutLine.style.display = "block";
+        message.style.display = "block";
+    }
+    startY = null;
+});
+</script>
 
 </body>
 </html>
+
