--- a/index.html
+++ b/index.html
@@ -1,282 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Birthday Surprise 🎂</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Happy Birthday 🎂</title>
 
 <style>
-* { box-sizing: border-box; }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
 
 body {
-    margin: 0;
     height: 100vh;
     background: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
     overflow: hidden;
 }
 
-/* phone container */
-.phone {
-    width: 92vw;
-    max-width: 360px;
-    background: #fff6fa;
-    border-radius: 30px;
-    padding: 28px 22px;
-    text-align: center;
-    box-shadow: 0 20px 45px rgba(0,0,0,0.15);
-    display: none;
+/* ===== SCREENS ===== */
+.screen {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease;
 }
 
-.phone.active { display: block; }
+.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
 
-/* ---------- FIRST SCREEN ---------- */
+/* ===== FIRST PAGE (MATCH IMAGE) ===== */
 #screen1 {
-    animation: zoomIn 2.5s ease forwards;
+    background: white;
+    animation: zoomIn 1.6s ease forwards;
 }
 
 @keyframes zoomIn {
-    from { transform: scale(0.6); opacity: 0; }
+    from { transform: scale(0.92); opacity: 0; }
     to { transform: scale(1); opacity: 1; }
 }
 
-h1 {
-    color: #ff2f92;
-    font-size: 1.6rem;
-    margin-bottom: 14px;
+.card {
+    width: 90%;
+    max-width: 360px;
+    background: #fff3f7;
+    border-radius: 30px;
+    padding: 36px 26px;
+    text-align: center;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.15);
 }
 
-p {
-    font-size: 0.9rem;
-    color: #555;
+.card h1 {
+    color: #ff2f92;
+    font-size: 1.8rem;
+    margin-bottom: 18px;
+}
+
+.card p {
+    color: #444;
+    font-size: 0.95rem;
     line-height: 1.6;
+    margin-bottom: 22px;
 }
 
 .ready {
-    font-weight: 600;
     color: #ff2f92;
-    margin: 18px 0;
+    font-weight: 500;
+    margin-bottom: 24px;
 }
 
-button {
+.btn {
     width: 100%;
-    padding: 15px;
+    padding: 16px;
     border: none;
-    border-radius: 30px;
-    font-size: 1rem;
-    background: linear-gradient(135deg, #ff2f92, #ff6fb1);
+    border-radius: 40px;
+    background: linear-gradient(135deg, #ff2f92, #ff5fb3);
     color: white;
+    font-size: 1.05rem;
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+    box-shadow: 0 12px 25px rgba(255, 47, 146, 0.45);
 }
-
-button:active { transform: scale(0.97); }
 
 .footer {
-    margin-top: 20px;
-    font-size: 0.75rem;
+    margin-top: 22px;
+    font-size: 0.8rem;
     color: #777;
 }
 
-/* ---------- CAKE SCREEN ---------- */
+/* ===== SECOND PAGE ===== */
+#screen2 {
+    flex-direction: column;
+    background: linear-gradient(#ffffff, #ffe6ef);
+}
+
+/* text */
+h2 {
+    color: #ff4f8b;
+    margin-bottom: 6px;
+}
+
 .subtitle {
     font-size: 0.9rem;
     color: #666;
-    margin-bottom: 14px;
+    margin-bottom: 22px;
 }
 
-.instructions {
-    background: #ffffff;
-    border-radius: 18px;
-    padding: 14px;
-    font-size: 0.85rem;
-    color: #555;
-    margin-bottom: 16px;
-}
-
+/* ===== CAKE ===== */
 .cake-area {
-    position: relative;
-    height: 240px;
+    height: 260px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* cake body */
 .cake {
     position: relative;
-    width: 230px;
-    height: 140px;
-    background: linear-gradient(#f3d2b3, #e1b285);
-    border-radius: 0 0 70px 70px;
+    width: 180px;
+    height: 110px;
+    background: #f28cb2;
+    border-radius: 0 0 18px 18px;
     overflow: hidden;
 }
 
-/* frosting top */
-.cake::before {
+.cake::before,
+.cake::after {
     content: "";
     position: absolute;
-    top: -25px;
-    left: 0;
     width: 100%;
-    height: 50px;
-    background: #ffffff;
+    height: 12px;
+    background: #ffd1e2;
+}
+
+.cake::before { top: 35px; }
+.cake::after  { top: 65px; }
+
+.frosting {
+    position: absolute;
+    top: -22px;
+    width: 100%;
+    height: 44px;
+    background: white;
     border-radius: 50%;
 }
 
-/* candle */
 .candle {
     position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 10px;
-    height: 42px;
-    background: #ff4d6d;
-    border-radius: 5px;
+    top: -38px;
+    width: 8px;
+    height: 28px;
+    background: #ffd966;
+    border-radius: 4px;
 }
 
-.flame {
+.candle::after {
+    content: "";
     position: absolute;
-    top: -16px;
+    top: -10px;
     left: 50%;
     transform: translateX(-50%);
-    width: 12px;
-    height: 18px;
-    background: radial-gradient(circle, #ffd966, #ff8c00);
+    width: 6px;
+    height: 10px;
+    background: orange;
     border-radius: 50%;
 }
 
-/* cut line — FIXED CENTER */
 .cut-line {
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 4px;
+    width: 3px;
     height: 100%;
-    background: #ff2f92;
+    background: #ff4f8b;
     display: none;
 }
 
-/* success message */
 .message {
-    margin-top: 16px;
-    font-size: 1.2rem;
+    margin-top: 18px;
+    font-size: 1.1rem;
     font-weight: bold;
-    color: #ff2f92;
+    color: #ff4f8b;
     display: none;
-}
-
-/* confetti */
-.confetti {
-    position: absolute;
-    font-size: 18px;
-    animation: fall 1.4s linear forwards;
-}
-
-@keyframes fall {
-    from { transform: translateY(-20px); opacity: 1; }
-    to { transform: translateY(240px); opacity: 0; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- FIRST SCREEN -->
-<div class="phone active" id="screen1">
-    <h1>Happy Birthday,<br>Beautiful! 🎂✨</h1>
+<!-- FIRST PAGE -->
+<div class="screen" id="screen1">
+    <div class="card">
+        <h1>Happy Birthday, Beautiful! 🎂 ✨</h1>
 
-    <p>
-        Today is all about celebrating the most amazing person in my world.
-        I’ve created something magical just for you on your special day...
-    </p>
+        <p>
+            Today is all about celebrating the most amazing person in my world.
+            I’ve created something magical just for you on your special day…
+        </p>
 
-    <div class="ready">Ready for your birthday surprise?</div>
+        <div class="ready">Ready for your birthday surprise?</div>
 
-    <button id="goBtn">Let’s Gooo 💖</button>
+        <button class="btn" onclick="goNext()">Let’s Gooo 💖</button>
 
-    <div class="footer">
-        Made with endless love for your special day 💕
+        <div class="footer">
+            Made with endless love for your special day 💕
+        </div>
     </div>
 </div>
 
-<!-- CAKE SCREEN -->
-<div class="phone" id="screen2">
-    <h1>It’s Cake Time! 🎂</h1>
-    <div class="subtitle">Make your birthday wish come true!</div>
-
-    <div class="instructions">
-        Swipe down to cut the cake ✂️
-    </div>
+<!-- SECOND PAGE -->
+<div class="screen hidden" id="screen2">
+    <h2>It’s Cake Time! 🎂</h2>
+    <div class="subtitle">Swipe down to cut the cake</div>
 
     <div class="cake-area">
         <div class="cake" id="cake">
-            <div class="candle"></div>
-            <div class="flame"></div>
+            <div class="frosting"></div>
+
+            <div class="candle" style="left:30%"></div>
+            <div class="candle" style="left:50%"></div>
+            <div class="candle" style="left:70%"></div>
+
             <div class="cut-line" id="cutLine"></div>
         </div>
     </div>
 
-    <div class="message" id="message">Perfect Cut! 🎉✨</div>
+    <div class="message" id="message">Nice Cut 🎉</div>
 </div>
 
 <script>
-const screen1 = document.getElementById("screen1");
-const screen2 = document.getElementById("screen2");
-const goBtn = document.getElementById("goBtn");
-
-goBtn.onclick = () => {
-    screen1.classList.remove("active");
-    screen2.classList.add("active");
-    initCake();
-};
-
-function initCake() {
-    const cake = document.getElementById("cake");
-    const cutLine = document.getElementById("cutLine");
-    const message = document.getElementById("message");
-
-    let startY = null;
-    let done = false;
-
-    cake.addEventListener("pointerdown", e => {
-        if (done) return;
-        startY = e.clientY;
-    });
-
-    cake.addEventListener("pointerup", e => {
-        if (done || startY === null) return;
-
-        const distance = Math.abs(e.clientY - startY);
-
-        /* REQUIRE REAL SWIPE */
-        if (distance > 60) {
-            done = true;
-            cutLine.style.display = "block";
-            message.style.display = "block";
-            launchConfetti();
-        }
-
-        startY = null;
-    });
+function goNext() {
+    document.getElementById("screen1").classList.add("hidden");
+    document.getElementById("screen2").classList.remove("hidden");
 }
 
-function launchConfetti() {
-    for (let i = 0; i < 20; i++) {
-        const c = document.createElement("div");
-        c.className = "confetti";
-        c.textContent = ["🎉","✨","🎂","💖"][Math.floor(Math.random()*4)];
-        c.style.left = Math.random() * 100 + "%";
-        c.style.top = "0px";
-        document.body.appendChild(c);
-        setTimeout(() => c.remove(), 1400);
+const cake = document.getElementById("cake");
+const cutLine = document.getElementById("cutLine");
+const message = document.getElementById("message");
+
+let startY = null;
+let done = false;
+
+cake.addEventListener("pointerdown", e => {
+    startY = e.clientY;
+});
+
+cake.addEventListener("pointerup", e => {
+    if (done || startY === null) return;
+
+    if (e.clientY - startY > 60) {
+        done = true;
+        cutLine.style.display = "block";
+        message.style.display = "block";
     }
-}
+    startY = null;
+});
 </script>
 
 </body>
